Fixes #2549 fix mobile horizontal scroll.

--- a/scss/_custom-styles.scss
+++ b/scss/_custom-styles.scss
@@ -182,7 +182,8 @@
 }
 .btn-redbar .icon-text {
   display: block;
-  margin: -5px;
+  /* Fixes https://github.com/az-digital/az_quickstart/issues/2549 */
+  margin: -5px 0;
   font-size: 10px;
   line-height: 10px;
 }
